fix the img bottom grey gap on weekly menu

--- a/app/sass/partials/_dish.scss
+++ b/app/sass/partials/_dish.scss
@@ -10,7 +10,7 @@
         overflow: hidden;
         img {
             position: absolute;
-            top: -40%;
+            top: -30%;
             width: 100%;     
             height: auto;
         }
