--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -208,7 +208,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 /* line 11, ../sass/partials/_dish.scss */
 .ui .card .image img {
   position: absolute;
-  top: -40%;
+  top: -30%;
   width: 100%;
   height: auto;
 }
